--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: aquamarine;
+  
 }
 
 .app {
@@ -72,5 +72,5 @@ p {
   height: 50%;
   width: 70%;
   border: 2px solid black;
-  background-color: rgb(130, 139, 0);
+  background-color: coral;
 }
